crates/plotnik-tests/tests/03-analyze/self_recursion/no_progress_left_recursion.txt
E = [
  (E)
  (x)
]
------------------ DIAGNOSTICS -------------------
error: infinite recursion: cycle makes no progress
 --> query.ptk:2:4
  |
2 |   (E)
  |    ^
  |    |
  |    references itself
  |
help: match at least one syntax-tree node before recursing
-------------------- SYMBOLS ---------------------
E
  E (cycle)
